name:                acme-certify
version:             0.1.0.0
synopsis:            Get a certificate using Let's Encrypt ACME protocol
description:         Please see README.md
homepage:            https://github.com/afcady/acme
author:              Vo Minh Thu, Andrew Cady
maintainer:          noteed@gmail.com
copyright:           2016 Vo Minh Thu, Andrew Cady
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.ACME.Encoding
  build-depends:       base >= 4.7 && < 5,
                       cryptonite, aeson, bytestring, base64-bytestring, SHA,
                       text, HsOpenSSL, time, email-validate
  default-language:    Haskell2010

executable acme-certify
  -- hs-source-dirs:      app
  main-is:             acme-certify.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base, acme-certify,
                       cryptonite, aeson, bytestring, base64-bytestring, SHA,
                       text, HsOpenSSL, wreq, lens, lens-aeson,
                       optparse-applicative, directory, mtl, time, pipes,
                       email-validate, network-uri
  default-language:    Haskell2010

-- test-suite acme-certify-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , acme-certify
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/afcady/acme
